--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             <div class="release-main">
                 <div class="links">
                     <ul>
-                        <li>
-                            <div class="link-info">
-                                <h3>免费使用7天</h3>
-                                <p style="color: #ff2f00">➡小红书发广告可免费使用7天</p>
-                            </div>
-                            <a href="https://yq.hpvpn.com/article/guide" target="_blank">点此查看</a>
-                        </li>
+<!--                        <li>-->
+<!--                            <div class="link-info">-->
+<!--                                <h3>免费使用7天</h3>-->
+<!--                                <p style="color: #ff2f00">➡小红书发广告可免费使用7天</p>-->
+<!--                            </div>-->
+<!--                            <a href="https://yq.hpvpn.com/article/guide" target="_blank">点此查看</a>-->
+<!--                        </li>-->
                         <li>
                             <div class="link-info">
                                 <h3>Hyper加速器主地址</h3>
@@ -77,7 +77,7 @@
                 <div class="tips">
                     <p>
                         <font color="red">收藏本站永久地址：<font color="blue"><a
-                                    href="https://www.hpvpn.com">https://www.hpvpn.com</a></font>，防止失联！</font>
+                                    href="https://hpnet.top">https://hpnet.top</a></font>，防止失联！</font>
                     </p>
                     <p><b>网站域名经常更新，防止网站打不开</b><br>
                         <b>请务必收藏此网页，永久有效！</b>
