--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             <div class="release-main">
                 <div class="links">
                     <ul>
-<!--                        <li>-->
-<!--                            <div class="link-info">-->
-<!--                                <h3>免费使用7天</h3>-->
-<!--                                <p style="color: #ff2f00">➡小红书发广告可免费使用7天</p>-->
-<!--                            </div>-->
-<!--                            <a href="https://yq.hpvpn.com/article/guide" target="_blank">点此查看</a>-->
-<!--                        </li>-->
+                       <li>
+                           <div class="link-info">
+                               <h3>免费使用7天</h3>
+                               <p style="color: #ff2f00">➡小红书发广告可免费使用7天</p>
+                           </div>
+                           <a href="https://yq.hpvpn.com/article/guide" target="_blank">点此查看</a>
+                       </li>
                         <li>
                             <div class="link-info">
                                 <h3>Hyper加速器主地址</h3>
