--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="release">
         <div class="release-body">
             <div class="title">
-                <h2>Hyper加速器地址发布页</h2>
+                <h2>哈皮加速器地址发布页</h2>
                 <br>
                 <br>
                 <p>请 Ctrl+D 收藏本页到浏览器收藏夹回家不迷路<br><br>
@@ -41,15 +41,15 @@
                        </li>
                         <li>
                             <div class="link-info">
-                                <h3>Hyper加速器主地址</h3>
+                                <h3>哈皮加速器主地址</h3>
                             </div>
-                            <a href="https://www.hpvpn.com" target="_blank">主地址</a>
+                            <a href="https://bord.hpvpn.xyz" target="_blank">主地址</a>
                         </li>
                         <li>
                             <div class="link-info">
                               <h3>Hyper加速器备用地址</h3>
                             </div>
-                            <a href="https://www.hpvpn.com" target="_blank">备用地址</a>
+                            <a href="https://bord.hpvpn.xyz" target="_blank">备用地址</a>
                         </li>
 <!--                        <li>-->
 <!--                            <div class="link-info">-->
