--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </li>
                         <li>
                             <div class="link-info">
-                              <h3>Hyper加速器备用地址</h3>
+                              <h3>哈皮加速器备用地址</h3>
                             </div>
                             <a href="https://bord.hpvpn.xyz" target="_blank">备用地址</a>
                         </li>
