--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <div class="link-info">
                                 <h3>哈皮加速器主地址</h3>
                             </div>
-                            <a href="https://bord.hpvpn.xyz" target="_blank">主地址</a>
+                            <a href="https://a.hapi6.com" target="_blank">主地址</a>
                         </li>
                         <li>
                             <div class="link-info">
