--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Hyper加速器永久地址发布页，收藏我回家不迷路！</title>
-  <meta name="keywords" content="Hyper加速器发布页,Hyper加速器最新地址,Hyper加速器网址多少">
-  <meta name="description" content="Hyper加速器发布页,Hyper加速器最新地址,Hyper加速器网址多少">
+  <title>哈皮加速器永久地址发布页，收藏我回家不迷路！</title>
+  <meta name="keywords" content="哈皮加速器发布页,哈皮加速器最新地址,哈皮加速器网址多少">
+  <meta name="description" content="哈皮加速器发布页,哈皮加速器最新地址,哈皮加速器网址多少">
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <link rel="stylesheet" href="static/css.css">
 </head>
