--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <ul>
           <li>
             <div class="link-info">
-              <h3 style="color: #ff2f00">免费使用30天</h3>
+              <h3 style="color: #ff2f00">参与活动免费使用30天</h3>
               <!--                                <p style="color: #ff2f00">➡小红书发广告可免费使用30天</p> -->
             </div>
-            <a href="https://yq.hpvpn.com/article/guide" target="_blank">点此查看</a>
+            <a href="https://yq.hpvpn.com/article/guide" target="_blank">点击参与</a>
           </li>
           <li>
             <div class="link-info">
