--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <h2>哈皮加速器地址发布页</h2>
       <br>
       <br>
+      <p  style="color: #ff2f00">恭喜你解锁2024最简单加速器解决方案！<br>
       <p>请 Ctrl+D 收藏本页到浏览器收藏夹回家不迷路<br><br>
         <!-- <b>- 点击下方按钮进入网站 -</b><br><br> -->
         <b>本站运营时间：</b> <b id="span_dt_dt"></b>
