--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <div class="title">
       <h2>哈皮加速器地址发布页</h2>
       <br>
-      <br>
       <p  style="color: #ff2f00">恭喜你解锁2024最简单加速器解决方案！<br>
       <p>请 Ctrl+D 收藏本页到浏览器收藏夹回家不迷路<br><br>
         <!-- <b>- 点击下方按钮进入网站 -</b><br><br> -->
@@ -35,7 +34,7 @@
         <ul>
           <li>
             <div class="link-info">
-              <h3 style="color: #ff2f00">参与活动免费使用30天</h3>
+              <h3 style="color: #ff2f00">参与领取1个月/终身VIP会员！</h3>
               <!--                                <p style="color: #ff2f00">➡小红书发广告可免费使用30天</p> -->
             </div>
             <a href="https://yq.hpvpn.com/article/guide" target="_blank">点击参与</a>
