--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <ul>
           <li>
             <div class="link-info">
-              <h3 style="color: #ff2f00">参与领取1个月/终身VIP会员！</h3>
+              <h3 style="color: #ff2f00">参与领取1个月/永久VIP会员！</h3>
               <!--                                <p style="color: #ff2f00">➡小红书发广告可免费使用30天</p> -->
             </div>
             <a href="https://yq.hpvpn.com/article/guide" target="_blank">点击参与</a>
